correction bug overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,9 @@ body {
   font-family: 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body, html {
+  position: relative;
   overflow-x: hidden;
 }
